Fixed alignment issue on /auto

--- a/static/auto.css
+++ b/static/auto.css
@@ -56,5 +56,8 @@ a
 {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr;
 	align-items: end;
 }
+
+
